--- a/BiuBiu/Packages/manifest.json
+++ b/BiuBiu/Packages/manifest.json
@@ -2,10 +2,13 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "1.19.17",
+    "com.unity.burst": "1.6.4",
     "com.unity.collab-proxy": "1.7.1",
+    "com.unity.entities": "0.17.0-preview.42",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.9",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.rendering.hybrid": "0.11.0-preview.44",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
