--- a/BiuBiu/Packages/manifest.json
+++ b/BiuBiu/Packages/manifest.json
@@ -1,18 +1,22 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.addressables": "1.19.19",
-    "com.unity.burst": "1.6.4",
-    "com.unity.collab-proxy": "1.7.1",
-    "com.unity.ide.rider": "3.0.7",
-    "com.unity.ide.visualstudio": "2.0.9",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.inputsystem": "1.1.0-pre.5",
-    "com.unity.test-framework": "1.1.27",
+    "com.unity.addressables": "1.21.8",
+    "com.unity.ai.navigation": "1.1.1",
+    "com.unity.burst": "1.8.4",
+    "com.unity.collab-proxy": "2.0.0",
+    "com.unity.entities": "1.0.0-pre.65",
+    "com.unity.ide.rider": "3.0.18",
+    "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.5.0",
+    "com.unity.performance.profile-analyzer": "1.2.2",
+    "com.unity.properties": "2.1.0-exp.3",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.5.5",
+    "com.unity.timeline": "1.7.3",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.6.1",
+    "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
